2014-08-27  Akos Kiss  <akiss@inf.u-szeged.hu>

        Ensure that the call frame passed from JIT code via JSC::operationCallEval to JSC::eval always contains the valid scope chain.
        https://bugs.webkit.org/show_bug.cgi?id=136313

        Reviewed by Michael Saboff.

        Do not rely on calling conventions to fill in the CallerFrame component
        of the execCallee parameter of JSC::operationCallEval.

        * jit/JITOperations.cpp:

2014-08-27  Saam Barati  <sbarati@apple.com>

        Deconstruction object pattern node emits the wrong start/end text positions
        https://bugs.webkit.org/show_bug.cgi?id=136304

        Reviewed by Geoffrey Garen.

        Object pattern nodes that used the syntactic sugar binding: 
        'var {foo} = {foo:20}' instead of 'var {foo:foo} = {foo:20}' 
        would get the wrong text position for variable 'foo'. The position 
        would be placed on the comma(s)/closing brace instead of the identifier. 
        This patch fixes this bug by caching the identifier's JSToken before 
        trying to parse an optional colon.

        * parser/Parser.cpp:
        (JSC::Parser<LexerType>::parseVarDeclarationList):
        (JSC::Parser<LexerType>::createBindingPattern):
        (JSC::Parser<LexerType>::parseDeconstructionPattern):
        * parser/Parser.h:

2014-08-27  Brent Fulgham  <bfulgham@apple.com>

        [Win] Build fix after last commit.

        Check in new DLLLauncherMain.cpp file.

        * JavaScriptCore.vcxproj/jsc/DLLLauncherMain.cpp: Added.
        (enableTerminationOnHeapCorruption):
        (getStringValue):
        (applePathFromRegistry):
        (appleApplicationSupportDirectory):
        (copyEnvironmentVariable):
        (prependPath):
        (fatalError):
        (directoryExists):
        (modifyPath):
        (getLastErrorString):
        (wWinMain):

2014-08-27  Brent Fulgham  <bfulgham@apple.com>

        [Win] testapi and testRegExp need to find support libraries.